syntax = "proto3";

package ecommerce;

option java_multiple_files = true;
option java_package = "productinfo.servicio";
option java_outer_classname = "Productinfo";
option objc_class_prefix = "HLW";


service ProductInfo {
    rpc addProduct(Product) returns (ProductID);
    rpc getProduct(ProductID) returns (Product);
}

message Product {
    string id = 1;
    string name = 2;
    string description = 3;
    float price = 4;
}

message ProductID {
    string value = 1;
}
